# CodingPromptes

./: .gitignore  Caddyfile  Dockerfile  Guide_Prompt_Engineering.md  Makefile  README.md  docker-compose.yml  rapport-optimisation-prompts.md
.github/workflows/: build-gpu-server.yml  ci-inkwell.yml
inkwell-cli/: Cargo.toml
inkwell-cli/.inkwell/: project.json
inkwell-cli/src/: chat.rs  commands.rs  main.rs  project.rs  sdd.rs
inkwell-core/: Cargo.toml
inkwell-core/src/: api_client.rs  i18n.rs  lib.rs  models.rs  prompt.rs  types.rs
inkwell-core/tests/: core_tests.rs
inkwell-devtools-mcp/: Cargo.toml  README.md
inkwell-devtools-mcp/src/: main.rs  socket.rs  tools.rs
inkwell-gpui/: Cargo.toml
inkwell-gpui/src/: app.rs  layout.rs  llm.rs  main.rs  persistence.rs  settings.rs  state.rs  store.rs  theme.rs  types.rs
inkwell-gpui/src/app/: auth_screen.rs  mod.rs  profile_modal.rs  settings_modal.rs  sync.rs  workspace.rs
inkwell-gpui/src/components/: block_editor.rs  bottom_bar.rs  editor_pane.rs  header_bar.rs  left_panel.rs  left_panel_views.rs  mod.rs  right_panel.rs  right_panel_tabs.rs
inkwell-gpui/src/devtools/: actions.rs  handlers.rs  mod.rs  mutators.rs  protocol.rs  screenshot.rs  server.rs
inkwell-gpui/src/dock/: mod.rs
inkwell-gpui/src/kiro/: autopilot.rs  commands.rs  context.rs  credits.rs  hooks.rs  intent.rs  mod.rs  sessions.rs  steering.rs
inkwell-gpui/src/panels/left/: mod.rs  views.rs
inkwell-gpui/src/panels/right/: mod.rs  tabs.rs
inkwell-gpui/src/spec/: agent_files.rs  catalog.rs  export.rs  extensions.rs  generator.rs  git.rs  mod.rs  native.rs  presets.rs  templates.rs  validator.rs  workflow.rs
inkwell-gpui/src/ui/: colors.rs  components.rs
inkwell-mcp/: Cargo.toml
inkwell-mcp/src/: main.rs  tools.rs
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: db.ts  index.ts
prompt-api-server/: Cargo.toml
prompt-api-server/src/: api_routes.rs  database.rs  jwt_auth.rs  main.rs
prompt-ide/: .dockerignore  Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
prompt-ide-desktop/: Cargo.toml  dist
prompt-ide-desktop/src/: main.rs
prompt-ide-desktop/src-tauri/: Cargo.toml  tauri.conf.json
prompt-ide-desktop/src-tauri/capabilities/: default.json
prompt-ide-desktop/src-tauri/src/: main.rs  pty_manager.rs
prompt-ide-desktop/src/models/: block.rs  config.rs  framework.rs  mod.rs  project.rs
prompt-ide-desktop/src/services/: api.rs  auth.rs  backend.rs  db.rs  i18n.rs  mod.rs
prompt-ide-desktop/src/views/: auth.rs  editor.rs  library.rs  mod.rs  playground.rs  preview.rs  settings.rs
prompt-ide/docs/: DOCUMENTATION.md  GUIDE_UTILISATEUR.md
prompt-ide/public/: manifest.json  sw.js
prompt-ide/src/: App.tsx  index.css  main.tsx
prompt-ide/src/components/: AnalyticsPanel.tsx  AudioBars.tsx  AuthPage.tsx  BlockEditor.tsx  CollaborationPanel.tsx  ConversationMode.tsx  ExecutionHistory.tsx  ExportPanel.tsx  FrameworkSelector.tsx  GpuFleet.tsx  Library.tsx  LintingPanel.tsx  Playground.tsx  PreviewPanel.tsx  ProfileModal.tsx  PromptBlock.tsx  PromptChain.tsx  PromptOptimizer.tsx  SttSettings.tsx  TagsEditor.tsx  TerminalPanel.tsx  TokenCounter.tsx  UserMenu.tsx  VariablesPanel.tsx  VersionHistory.tsx
prompt-ide/src/hooks/: usePromptProject.ts
prompt-ide/src/lib/: api.ts  auth.ts  backend.ts  codemirror-prompt.ts  db.ts  git.ts  github.ts  i18n.ts  localdb.ts  markdown.ts  prompt.ts  sdd-conventions.ts  sdd-hooks.ts  sdd-presets.ts  sdd-prompts.ts  stt.ts  theme.ts  tokens.ts  types.ts
prompt-stt-server/: Cargo.toml  Dockerfile.sandbox  install-windows.bat  install-windows.ps1  installer.iss
prompt-stt-server/src/: api_routes.rs  database.rs  downloader.rs  fleet.rs  hardware.rs  hw_widgets.rs  i18n.rs  jwt_auth.rs  main.rs  models.rs  ollama.rs  server.rs  terminal.rs  whisper_engine.rs
