[package]
name = "inkwell-cli"
version = "0.1.0"
edition = "2021"
description = "Inkwell CLI — Spec-Driven Development from the terminal"

[[bin]]
name = "inkwell"
path = "src/main.rs"

[dependencies]
inkwell-core = { path = "../inkwell-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
colored = "2"
