[package]
name = "inkwell-core"
version = "0.1.0"
edition = "2021"
description = "Shared core library for Inkwell platform (types, API client, LLM, SDD)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
jsonwebtoken = "9"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt"] }
bytes = "1"
regex-lite = "0.1"
