[package]
name = "inkwell-devtools-mcp"
version = "0.1.0"
edition = "2021"
description = "Inkwell DevTools MCP — live control of the GPUI app from Claude Code"

[[bin]]
name = "inkwell-devtools-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync", "time"] }
dirs = "6"
