[package]
name = "inkwell-gpui"
version = "0.1.0"
edition = "2021"
description = "Inkwell native IDE — GPU-accelerated prompt engineering"

[dependencies]
inkwell-core = { path = "../inkwell-core" }
gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }
gpui_platform = { git = "https://github.com/zed-industries/zed", branch = "main", features = ["x11", "wayland"] }
# gpui-component = { git = "https://github.com/longbridge/gpui-component" }  # waiting for GPUI version alignment
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
log = "0.4"
env_logger = "0.11"
