[package]
name = "inkwell-gpui"
version = "0.1.0"
edition = "2021"
description = "Inkwell native IDE — GPU-accelerated prompt engineering"

[dependencies]
inkwell-core = { path = "../inkwell-core" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "30e7e8b55086a4496bfd863950eaabda2527e3e7" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "30e7e8b55086a4496bfd863950eaabda2527e3e7", features = ["x11", "wayland"] }
gpui-component = { path = "../vendor/gpui-component/crates/ui" }
gpui-component-assets = { path = "../vendor/gpui-component/crates/assets" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "io-util"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
cpal = "0.15"
hound = "3.5"
base64 = "0.22"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
zip = "2"
