[package]
name = "inkwell-mcp"
version = "0.1.0"
edition = "2021"
description = "Inkwell MCP Server — Model Context Protocol for AI agents"

[[bin]]
name = "inkwell-mcp"
path = "src/main.rs"

[dependencies]
inkwell-core = { path = "../inkwell-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
