[package]
name = "inkwell-api-server"
version = "1.0.0"
edition = "2024"
description = "Inkwell — Backend API server (SQLite + JWT + LLM proxy)"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
jsonwebtoken = "9"
argon2 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
