[package]
name = "prompt-ide-desktop"
version = "1.0.0"
edition = "2024"
description = "Prompt IDE — Desktop AI prompt engineering platform (Rust + Iced)"

[dependencies]
# GUI
iced = { version = "0.13", features = ["tokio", "svg"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
futures-util = "0.3"
regex-lite = "0.1"

[profile.release]
opt-level = 3
lto = true
