[package]
name = "prompt-ai-server"
version = "0.3.0"
edition = "2024"
description = "Local AI server (STT + LLM proxy) with Iced GUI for Inkwell"

[dependencies]
# GUI
iced = { version = "0.13", features = ["tokio", "image"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }

# Whisper inference
whisper-rs = "0.13"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
bytes = "1"
dirs = "6"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
hound = "3.5"
bytemuck = "1"
base64 = "0.22"
http = "1"
axum-extra = { version = "0.10", features = ["typed-header"] }

# Backend data
rusqlite = { version = "0.32", features = ["bundled"] }
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
