[package]
name = "inkwell-desktop"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
